--- a/templates/management/administrator/citizen_details.html
+++ b/templates/management/administrator/citizen_details.html
@@ -94,7 +94,7 @@
               <p>Birth Place: <span class="h5">{{citizen.birth_place}}</span></p>
             </div>
             <div class="col-sm-12 col-xl-6 mb-1">
-              <p>NID No.: <span class="h5">#{{citizen.nid_number}}</span></p>
+              <p>NID No.: <span class="h5"> {{citizen.nid_number}}</span></p>
             </div>
             <div class="col-sm-12 col-xl-6 mb-1">
               <p>Volume No.: <span class="h5">#{{citizen.volume_number}}</span></p>
