--- a/templates/management/main.html
+++ b/templates/management/main.html
@@ -102,6 +102,8 @@
     <script src="{% static 'staff/vendors/scripts/script.min.js' %}"></script>
     <script src="{% static 'staff/vendors/scripts/process.js' %}"></script>
     <script src="{% static 'staff/vendors/scripts/layout-settings.js' %}"></script>
+    <script src="{% static 'staff/src/plugins/apexcharts/apexcharts.min.js' %}"></script>
+    <script src="{% static 'staff/vendors/scripts/dashboard.js' %}"></script>
     <script src="{% static 'staff/src/plugins/datatables/js/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'staff/src/plugins/datatables/js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'staff/src/plugins/datatables/js/dataTables.responsive.min.js' %}"></script>
