--- a/templates/management/administrator/dashboard.html
+++ b/templates/management/administrator/dashboard.html
@@ -29,6 +29,50 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-xl-3 mb-30">
+        <div class="card-box height-100-p widget-style1">
+          <div class="d-flex flex-wrap align-items-center">
+            <div class="widget-data">
+              <div class="h3 mb-0">{{new_reports.count}}</div>
+              <div class="weight-600 font-14">Lost NID Card Report</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 mb-30">
+        <div class="card-box height-100-p widget-style1">
+          <div class="d-flex flex-wrap align-items-center">
+            <div class="widget-data">
+              <div class="h3 mb-0">{{new_applications.count}}</div>
+              <div class="weight-600 font-14">NID Applications</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 mb-30">
+        <div class="card-box height-100-p widget-style1">
+          <div class="d-flex flex-wrap align-items-center">
+            <div class="widget-data">
+              <div class="h3 mb-0">{{services.count}}</div>
+              <div class="weight-600 font-14">All Services</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 mb-30">
+        <div class="card-box height-100-p widget-style1">
+          <div class="d-flex flex-wrap align-items-center">
+            <div class="widget-data">
+              <div class="h3 mb-0">{{citizens.count}}</div>
+              <div class="weight-600 font-14">All Citizens</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="card-box pd-20 height-100-p mb-30">
       <div class="row align-items-center">
         <div class="col-md-4">
