--- a/templates/management/commune/lost_nidReportDetails.html
+++ b/templates/management/commune/lost_nidReportDetails.html
@@ -47,6 +47,16 @@
           <div class="row px-4">
             <h6 class="">Citizen Information</h6>
             <hr />
+            {% if report.citizen.picture %}
+            <div class="col-lg-12 mb-4">
+              <img
+                class="profile-user-img img-responsive img-circle"
+                src="{{report.citizen.picture.url}}"
+                width="140px"
+                alt="{{report.citizen.first_name}} image"
+              />
+            </div>
+            {% endif %}
             <div class="col-lg-12 mb-4">
               <span class="">
                 Full names:
@@ -98,9 +108,8 @@
             <div class="col-lg-12 mb-1">
               <p>Description:</p>
               <div class="form-group">
-                <label for="phone">Description</label>
                 <textarea
-                  class="form-control bg-white"
+                  class="form-control bg-white border-0"
                   rows="10"
                   placeholder="Description ..."
                   name="description"
